Added a new page(about)

--- a/WeatherApp/weather_app/Templates/weather_app/about.html
+++ b/WeatherApp/weather_app/Templates/weather_app/about.html
@@ -1,9 +1,10 @@
 {% extends 'weather_app/base.html'%}
 
 {% block title %}
-Главная страница
+О нас
 {% endblock %}
 
 {% block content %}
-<h1>Главная страница</h1>
+<h1>О нас</h1>
 {% endblock %}
+
