--- a/WeatherApp/weather_app/Templates/weather_app/about.html
+++ b/WeatherApp/weather_app/Templates/weather_app/about.html
@@ -1,10 +1,13 @@
-{% extends 'weather_app/base.html'%}
+{% extends 'weather_app/base.html' %}
 
 {% block title %}
-О нас
+WeatherApp | О нас
+{% endblock %}
+
+{% block stylesheets %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 {% endblock %}
 
 {% block content %}
 <h1>О нас</h1>
 {% endblock %}
-
