--- a/WeatherApp/weather_app/Templates/weather_app/maps.html
+++ b/WeatherApp/weather_app/Templates/weather_app/maps.html
@@ -1,14 +1,13 @@
 {% extends 'weather_app/base.html' %}
 
 {% block title %}
-WeatherApp | Главная страница
+WeatherApp | О нас
 {% endblock %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" type="text" href="{static 'css/index-style.css'}">
 {% endblock %}
 
 {% block content %}
-<h1>Главная страница</h1>
+<h1>Карты</h1>
 {% endblock %}
