--- a/WeatherApp/weather_app/Templates/weather_app/index.html
+++ b/WeatherApp/weather_app/Templates/weather_app/index.html
@@ -1,14 +1,42 @@
-{% extends 'weather_app/base.html' %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{static 'css/index-style.css'}">
+    <title>WeatherApp | Главная страница</title>
+</head>
+<body>
+<header>
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <div class="header1">
 
-{% block title %}
-WeatherApp | Главная страница
-{% endblock %}
+      <a href="/">
+       <img src="{% static 'images/sun.png' %}" width="30" height="30">
+      </a>
+        </div>
 
-{% block stylesheets %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" type="text" href="{static 'css/index-style.css'}">
-{% endblock %}
-
-{% block content %}
-<h1>Главная страница</h1>
-{% endblock %}
+      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="/info">Информация</a>
+      </nav>
+    </div>
+</header>
+<div class="container mt-5">
+    <div class="row">
+        <form action="">
+            <label for="city">Город</label>
+            <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
+            <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger"
+        </form>
+    </div>
+    <div class="col-4 offset-1">
+        <h1>Информация</h1>
+        <div class="alert alert-danger">
+            Погода в Минске
+        </div>
+    </div>
+</div>
+</body>
+</html>
