--- a/WeatherApp/weather_app/Templates/weather_app/index.html
+++ b/WeatherApp/weather_app/Templates/weather_app/index.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{static 'css/index-style.css'}">
+    <link rel="stylesheet" href="{% static 'css/index-style.css' %}">
     <title>WeatherApp | Главная страница</title>
 </head>
 <body>
 <header>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-        <div class="header1">
-
-      <a href="/">
-       <img src="{% static 'images/sun.png' %}" width="30" height="30">
-      </a>
+        <div class="header-image">
+              <a href="/">
+               <img src="{% static 'images/sun.png' %}" width="40" height="40">
+              </a>
         </div>
+        <a class="logo" href="/">
+            WeatherApp
+        </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
@@ -28,7 +30,7 @@
         <form action="">
             <label for="city">Город</label>
             <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
-            <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger"
+            <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger">
         </form>
     </div>
     <div class="col-4 offset-1">
