Getting weather data about the city from a request on the site

--- a/WeatherApp/weather_app/Templates/weather_app/index.html
+++ b/WeatherApp/weather_app/Templates/weather_app/index.html
@@ -27,7 +27,7 @@
 </header>
 <div class="container mt-5">
     <div class="row">
-        <form action="">
+        <form>
             <label for="city">Город</label>
             <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
             <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger">
